--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "lisp interpreter",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test"
   },
   "author": "Kristian Andersen Hole",
   "license": "ISC",
