--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "Kristian Andersen Hole",
   "license": "ISC",
   "dependencies": {
-    "egna": "^1.0.5",
-    "fetch": "^1.1.0"
+    "egna": "^1.0.5"
   }
 }
