--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Kristian Andersen Hole",
   "license": "ISC",
   "dependencies": {
-    "egna": "^2.0.1"
+    "egna": "^2.0.1",
+    "node-fetch": "^2.6.0"
   }
 }
