--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "lisp interpreter",
   "main": "lisp.js",
   "scripts": {
-    "test": "node test"
+    "test": "ava"
   },
   "author": "Kristian Andersen Hole",
   "license": "ISC",
   "dependencies": {
     "egna": "^2.0.1",
     "node-fetch": "^2.6.0"
+  },
+  "devDependencies": {
+    "ava": "^2.3.0"
   }
 }
